@@ -70,10 +70,6 @@ gboolean                  hal_device_watch_condition      (HalDevice *device);
 gboolean		  hal_device_get_property_bool    (HalDevice *device,
 							   const gchar *property);
 
-gboolean                  hal_device_set_property_int     (HalDevice *device,
-							   const gchar *property,
-							   gint value);
-							   
 gint			  hal_device_get_property_int     (HalDevice *device,
 							   const gchar *property);
 									 
