@@ -57,6 +57,13 @@ GType        		hal_power_get_type        (void) G_GNUC_CONST;
 HalPower       	       *hal_power_new             (void);
 
 GPtrArray      	       *hal_power_get_batteries   (HalPower *power);
+
+gboolean		hal_power_set_power_save  (HalPower *power);
+
+gboolean                hal_power_set_power_save  (HalPower *power);
+
+gboolean                hal_power_unset_power_save(HalPower *power);
+
 G_END_DECLS
 
 #endif /* __HAL_POWER_H */
