@@ -1,4 +1,7 @@
 
+2009-04-22  9:52 Ali aliov@xfce.org 
+	 * : Enable set hal power save
+
 2009-04-20 10:24 Ali aliov@xfce.org 
 	 * : Provide the possibility to disable CPU freq control+don't compile the cpu governor code if we aren't on Linux
 
